--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -20,6 +20,15 @@ http {
         root /var/www/html/public;
         index index.php index.html index.htm;
 
+        # Configuración para proxies (Render)
+        real_ip_header X-Forwarded-For;
+        set_real_ip_from 0.0.0.0/0;
+        
+        # Headers de seguridad
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
@@ -30,6 +39,9 @@ http {
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             fastcgi_param DOCUMENT_ROOT $realpath_root;
+            fastcgi_param HTTPS $https if_not_empty;
+            fastcgi_param HTTP_SCHEME $scheme;
+            fastcgi_param SERVER_PORT $server_port;
             fastcgi_buffers 16 16k;
             fastcgi_buffer_size 32k;
         }
